# ai_native-textbook

./: .gitignore  404.html  ACTUAL_PROBLEM_ANALYSIS.md  ANALYSIS_FIXES_SUMMARY.md  BUILD_VERIFICATION_REPORT.md  CAPSTONE_STARTER.md  DEPLOYMENT_GUIDE.md  DISABLED_CURSOR_ANALYSIS.md  DISABLED_CURSOR_FIX.md  HMR_SETUP_GUIDE.md  HMR_SIMPLIFIED_SETUP_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  INGESTION_COMPLETED.md  NPM_ENVIRONMENT_TROUBLESHOOTING.md  RAG_INDEXING_GUIDE.md  docusaurus.config.ts  index.html  package-lock.json  package.json  sidebars.ts
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.11bfdddf.css  styles.4eb89e39.css  (+2 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  README_HF.md  extract_chapters.py  list_models.py  main.py  pyproject.toml  query_sections.py  requirements.txt  test_gemini.py  verify_chatbot.py  verify_setup.py
backend/agent/: __init__.py  core.py  modes.py  prompts.py
backend/api/: __init__.py  main.py  models.py
backend/api/routes/: __init__.py  chat.py  sessions.py
backend/db/: __init__.py  connection.py  init_db.py  migration.sql  models.py  repositories.py
backend/retrieval/: __main__.py  logger.py  retriever.py  test_queries.py  validators.py
backend/tests/: test_chatbot_fixes.py  test_chatbot_fixes_simple.py  test_chunking.py  test_ingestion.py
backend/tests/retrieval/: test_retriever.py
docs/: intro.html  module-1.html  module-2.html  module-3.html  module-4.html  tags.html
docusaurus_textbook/: .env.local.example  .gitignore  docusaurus.config.ts
(+425 files in other folders)
