[project]
name = "rag-content-ingestion"
version = "0.1.0"
description = "Content ingestion and embedding pipeline for RAG chatbot"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "qdrant-client>=1.7.0",
    "cohere>=5.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=html --cov-report=term"
